Chore: "diary 어노테이션 재배치"