@@ -1,13 +1,9 @@
 package com.sptp.dawnary.diary.service;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import com.sptp.dawnary.diary.domain.Diary;
 import com.sptp.dawnary.diary.dto.DiaryDto;
-import com.sptp.dawnary.global.exception.DiaryNotFoundException;
 import com.sptp.dawnary.diary.repository.DiaryRepository;
+import com.sptp.dawnary.global.exception.DiaryNotFoundException;
 import com.sptp.dawnary.global.exception.MemberNotFoundException;
 import com.sptp.dawnary.global.util.MemberInfo;
 import com.sptp.dawnary.member.domain.Member;
@@ -16,6 +12,9 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -30,8 +29,7 @@ public class DiaryService {
     // 다이어리 등록
     public Diary saveDiary(Diary diary) {
         diary.setMember(getMember());
-        Diary result = diaryRepository.save(diary);
-        return result;
+        return diaryRepository.save(diary);
     };
 
     // 다이어리 수정
@@ -42,9 +40,7 @@ public class DiaryService {
             diaryRepository.save(diary);
             return true;
         }
-
         return false;
-
     }
 
     // 다이어리 삭제
@@ -52,9 +48,10 @@ public class DiaryService {
         if (diaryRepository.existsById(diaryId)) {
             diaryRepository.deleteById(diaryId);
             return true;
-        } else {
-            return false;
         }
+
+        return false;
+
     }
 
     // 다이어리 목록 조회
@@ -62,7 +59,7 @@ public class DiaryService {
         List<Diary> diaries = diaryRepository.findByMemberId(memberId);
         return diaries.stream()
                 .map(DiaryDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 특정 다이어리 조회
